Open Graph support

--- a/SOURCES/repoview.8
+++ b/SOURCES/repoview.8
@@ -1,7 +1,7 @@
-.TH "repoview-kaos" "8" "0.6.6" "Konstantin Ryabitsev" "Applications/Utilities"
+.TH "repoview-kaos" "8" "0.6.6" "Anton Novojilov" "Applications/Utilities"
 
 .SH NAME
-\fBrepoview\fR \- Make YUM repositories browseable
+\fBrepoview-kaos\fR \- Make YUM repositories browseable
 
 .SH SYNOPSIS
 \fBrepoview\fR [options] repodir
@@ -11,6 +11,8 @@ RepoView allows one to easily create a set of static HTML pages in a
 YUM repository, allowing simple browsing of available packages. It uses 
 kid templating engine to create the pages and is therefore easily 
 customizeable.
+
+This is improved version of Repoview made by ESSENTIAL KAOS.
 
 .SH OPTIONS
 .TP
@@ -99,7 +101,11 @@ This will generate an RSS feed:
 .SH "AUTHORS"
 .LP 
 Konstantin Ryabitsev <icon@fedoraproject.org>
+.br
+Anton Novojilov <andy@essentialkaos.com>
 
 .SH "SEE ALSO"
-.LP 
-http://createrepo.baseurl.org/
+.LP
+https://github.com/essentialkaos/repoview-kaos
+.br
+http://createrepo.baseurl.org
